2005-05-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	Added a bunch of files to create exchange plugins for UI changes
	* exchange-change-password.[ch]/.glade
	* exchange-delegates.[ch]/.glade
	* exchange-delegate-user.[ch]
	* exchange-folder-size.[ch]
	* exchange-folder-tree.glade

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* exchange-account-setup.c: moved e-error to e-util

2005-03-18  Sushma Rai  <rsushma@novell.com>

	* exchange-account-setup.c (org_gnome_exchange_owa_url): When the 
	Exchange account doesn't contain OWA url parameter, setting the OWA 
	url value in the receive page and saving it.
	(construct_owa_url): Forming OWA url, from the existing parameters for
	hostname, ssl, OWA path and mailbox name.
	see #73627

2005-03-17  Sushma Rai  <rsushma@novell.com>

	* exchange-account-setup.c (exchange_authtype_changed): Setting the 
	authentication mechanism to both transport and source urls.

2005-03-05  Sushma Rai  <rsushma@novell.com>

	* org-gnome-exchange-account-setup.eplug.in: Added the commit function
	to save OOF data. This got missed in the previous commit. Also removed 
	duplicate accountWizard definition.

2005-02-28  JP Rosevear  <jpr@novell.com>

	* org-gnome-exchange-account-setup.eplug.in: add account wizard item

2005-02-27  Sushma Rai  <rsushma@novell.com>

	* exchange-account-setup.c (org_gnome_exchange_settings): Storing the 
	oof data enterted by user to a file, displaying the existing data on
	this page.
	(toggled_state): Signal hander for radiobutton, that sets the oof state.
	(update_state): Signal handler that reads the oof message entered. 
	(org_gnome_exchange_commit): Stores the oof data and does cleanup.
	(store_oof_info): Checks for the oof information file, writes the 
	oof state and message to the file. 
	(destroy_oof_data): Frees OOFData. 
	
2005-02-26  Sushma Rai  <rsushma@novell.com>

        * exchange-account-setup.c (org_gnome_exchange_check_options):